Showing loading bar when estimating scores

--- a/MapMaven/Components/Maps/DifficultyModifierSlider.razor
+++ b/MapMaven/Components/Maps/DifficultyModifierSlider.razor
@@ -18,6 +18,11 @@
     [Inject]
     ScoreEstimationSettings ScoreEstimationSettings { get; set; }
 
+    protected override void OnInitialized()
+    {
+        difficultyModifier = ScoreEstimationSettings.DifficultyModifierValue.Value;
+    }
+
     void OnDifficultyAmplifierChanged()
     {
         Task.Run(() => ScoreEstimationSettings.DifficultyModifierValue.OnNext(difficultyModifier));
