--- a/MapMaven/Components/Maps/ImprovementTweaker.razor
+++ b/MapMaven/Components/Maps/ImprovementTweaker.razor
@@ -29,7 +29,9 @@
                 Max="100"
                 ValueChanged="OnPredictedAccuracyFilterChanged" />
 
-            <DifficultyModifierSlider></DifficultyModifierSlider>
+            <MudPaper Class="my-3 pa-3" Style="background-color: var(--mud-palette-drawer-background);">
+                <DifficultyModifierSlider></DifficultyModifierSlider>
+            </MudPaper>
 
             <MudExpansionPanels Class="mt-3">
                 <MudExpansionPanel Text="Select..." Style="background-color: var(--mud-palette-drawer-background);">
