Showing difficulty modification in map browser footer

--- a/MapMaven/Components/Maps/ImprovementTweaker.razor
+++ b/MapMaven/Components/Maps/ImprovementTweaker.razor
@@ -36,7 +36,7 @@
                         <div class="d-flex flex-row align-center gap-3">
                             <MudIcon Icon="@Icons.Outlined.Info" Size="Size.Small"></MudIcon>
                             <MudText Typo="Typo.caption" Style="font-size: 11px">
-                                Adjust the difficulty of recommended maps. This difficulty is applied globally and stays saved.
+                                Increase or decrease the difficulty of recommended maps. This difficulty is applied globally and stays saved.
                             </MudText>
                         </div>
                     </MudAlert>
