--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -1,6 +1,7 @@
 ﻿@inherits ReactiveComponent
 
 @using MapMaven.Core.Utilities.Scoresaber
+@using MapMaven.Core.Models.DynamicPlaylists
 
 <MudDataGrid @ref="TableRef"
           T="Map"
@@ -24,7 +25,7 @@
                 @if (SelectedPlaylist != null)
                 {
                     <MudChip Variant="Variant.Outlined">
-                        @if (SelectedPlaylist.DynamicPlaylistConfiguration?.LeaderboardProvider is not null)
+                        @if (SelectedPlaylist.DynamicPlaylistConfiguration?.MapPool == MapPool.Improvement && SelectedPlaylist.DynamicPlaylistConfiguration?.LeaderboardProvider is not null)
                         {
                             <img src="@LeaderboardUtility.GetLogoPath(SelectedPlaylist.DynamicPlaylistConfiguration.LeaderboardProvider.Value)" class="mr-1" style="width: 24px;" />
                         }
