--- a/MapMaven/wwwroot/css/app.css
+++ b/MapMaven/wwwroot/css/app.css
@@ -149,3 +149,11 @@ a:hover {
 .mud-menu.full-width > button {
     width: 100%;
 }
+
+.mud-chip-text {
+    background-color: transparent;
+}
+
+    .mud-chip-text:hover:not(.mud-disabled), .mud-chip-text:focus-visible:not(.mud-disabled) {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
