Rounding BeatLeader star difficulty in details page

--- a/MapMaven/Components/Maps/MapDetail.razor
+++ b/MapMaven/Components/Maps/MapDetail.razor
@@ -94,7 +94,7 @@
                                 {
                                     <tr>
                                         <td><b>Star difficulty</b></td>
-                                        <td>@difficulty.Stars</td>
+                                        <td>@difficulty.Stars?.ToString("#0.##")</td>
                                     </tr>
                                     <tr>
                                         <td><b>Max score</b></td>
