--- a/MapMaven/Components/Maps/MapDetail.razor
+++ b/MapMaven/Components/Maps/MapDetail.razor
@@ -155,6 +155,10 @@
                                                 <td>@playerScore.Score.Accuracy.ToString("#0.##")%</td>
                                             </tr>
                                             <tr>
+                                                <td><b>Accuracy with mods</b></td>
+                                                <td>@playerScore.Score.AccuracyWithMods.ToString("#0.##")%</td>
+                                            </tr>
+                                            <tr>
                                                 <td><b>Rank</b></td>
                                                 <td>@playerScore.Score.Rank</td>
                                             </tr>
