Caching ranked maps calls

--- a/MapMaven/Components/PlayerProfileInfo.razor
+++ b/MapMaven/Components/PlayerProfileInfo.razor
@@ -48,6 +48,6 @@
 
     void RefreshData()
     {
-        Task.Run(() => MapService.RefreshDataAsync(forceRefresh: true));
+        Task.Run(() => MapService.RefreshDataAsync(reloadMapAndLeaderboardInfo: true, forceReloadCachedData: true));
     }
 }
