Added clear buttons to search fields

--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -39,6 +39,7 @@
                 <MudTextField @bind-Value="SearchString"
                               DebounceInterval="300"
                               Immediate="true"
+                              Clearable="true"
                               Placeholder="Search map name, song author, map author..."
                               Variant="Variant.Outlined"
                               Adornment="Adornment.Start"
