--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -13,6 +13,7 @@
         <MudTextField @bind-Value="PlaylistSearchText"
                       DebounceInterval="300"
                       Immediate="true"
+                      Clearable="true"
                       Variant="Variant.Outlined"
                       Adornment="Adornment.Start"
                       AdornmentIcon="@Icons.Material.Filled.Search"
@@ -65,6 +66,7 @@
         <MudTextField @bind-Value="DynamicPlaylistSearchText"
                       DebounceInterval="300"
                       Immediate="true"
+                      Clearable="true"
                       Variant="Variant.Outlined"
                       Adornment="Adornment.Start"
                       AdornmentIcon="@Icons.Material.Filled.Search"
