--- a/MapMaven/Components/Playlists/PlaylistSelector.razor
+++ b/MapMaven/Components/Playlists/PlaylistSelector.razor
@@ -6,6 +6,7 @@
             <MudTextField @bind-Value="PlaylistSearchText"
                           DebounceInterval="300"
                           Immediate="true"
+                          Clearable="true"
                           Variant="Variant.Outlined"
                           Adornment="Adornment.Start"
                           AdornmentIcon="@Icons.Material.Filled.Search"
