Working map preview cover

--- a/MapMaven/_Imports.razor
+++ b/MapMaven/_Imports.razor
@@ -14,6 +14,7 @@
 @using MapMaven.Models
 @using MapMaven.Models.Data
 @using MapMaven.Services
+@using MapMaven.Services.Playlists
 @using MapMaven.Pages
 @using MapMaven.Extensions
 @using MapMaven.Utility
