--- a/MapMaven/Components/Playlists/PlaylistCover.razor
+++ b/MapMaven/Components/Playlists/PlaylistCover.razor
@@ -3,17 +3,18 @@
 
 @inherits ReactiveComponent
 
-<img src="@CoverImage" />
+@if (!string.IsNullOrEmpty(CoverImage))
+{
+    <img src="@CoverImage" class="@Class" style="@Style" />
+}
+else
+{
+    <MudIcon Icon="@Icons.Filled.PlaylistPlay" Class="@Class" Style="@Style"></MudIcon>
+}
 
 @code {
     [Inject]
-    IMapService MapService { get; set; }
-
-    [Inject]
-    IBeatSaberDataService BeatSaberDataService { get; set; }
-
-    [Inject]
-    IHttpClientFactory HttpClientFactory { get; set; }
+    PlaylistCoverService PlaylistCoverService { get; set; }
 
     [Parameter]
     public Playlist Playlist { get; set; }
@@ -21,53 +22,16 @@
     [Parameter]
     public bool Small { get; set; } = false;
 
+    [Parameter]
+    public string Class { get; set; }
+
+    [Parameter]
+    public string Style { get; set; }
+
     string CoverImage;
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnParametersSetAsync()
     {
-        var mapCoverImageHttpClient = HttpClientFactory.CreateClient();
-
-        IObservable<string> coverImageObservable;
-
-        var coverImage = Small ? Playlist.CoverImageSmall : Playlist.CoverImage;
-
-        if (!string.IsNullOrEmpty(coverImage.Value))
-        {
-            coverImageObservable = Observable.Return(coverImage.Value);
-        }
-        else
-        {
-            var first4Maps = Playlist.Maps.Take(4).ToList();
-
-            coverImageObservable = MapService.MapsByHash
-                .Select(maps =>
-                    first4Maps.Select(map => maps.GetValueOrDefault(map.Hash))
-                )
-                .Select(async maps =>
-                {
-                    var mapImages = maps
-                        .Select(map => BeatSaberDataService.GetMapCoverImageStream(map.Hash))
-                        .ToArray();
-
-                    var completeImage = mapImages.Length switch
-                    {
-                        1 => mapImages[0],
-                        2 => await ImageUtilities.GenerateCollage(mapImages[0], mapImages[1]),
-                        3 => await ImageUtilities.GenerateCollage(mapImages[0], mapImages[1], mapImages[2]),
-                        4 => await ImageUtilities.GenerateCollage(mapImages[0], mapImages[1], mapImages[2], mapImages[3]),
-                        _ => null
-                    };
-
-                    var image = System.Drawing.Image.FromStream(completeImage);
-
-                    if (Small)
-                        image = image.GetResizedImage(50, 50);
-
-                    return image.ToDataUrl();
-                })
-                .Concat();
-        }
-
-        SubscribeAndBind(coverImageObservable, x => CoverImage = x);
+        CoverImage = await PlaylistCoverService.GetCoverImageAsync(Playlist);
     }
 }
