CTRL click to select maps and initiate selection

--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -16,6 +16,7 @@
           SelectedItems="SelectedMaps"
           SelectOnRowClick="false"
           SelectedItemsChanged="OnSelectedItemsChanged"
+          RowClick="OnRowClick"
           RowsPerPage="25"
           Style="@Style"
           RowStyle="height: 88px;">
